--- a/src/style.css
+++ b/src/style.css
@@ -3,3 +3,14 @@
 body{
     background: white;
 }
+h1{
+    padding-top: 20px;
+    text-align: center;
+    text-decoration: underline;}
+p{
+    padding: 20px 20px;
+    text-align: center;
+}
+.boton{
+    text-align: center;
+}
